[gd_scene load_steps=8 format=3 uid="uid://6dqtnmkkunlb"]

[ext_resource type="Script" path="res://scenes/ui/custom_nodes/h_box_options_container.gd" id="1_5a6v4"]
[ext_resource type="Texture2D" uid="uid://dft7wf2wdpdyu" path="res://assets/graphics/ui/options_menu/option_arrows.png" id="1_7akgs"]
[ext_resource type="Script" path="res://scenes/ui/custom_nodes/texture_sound_button/texture_sound_button.gd" id="2_ux2t3"]
[ext_resource type="AudioStream" uid="uid://hj3nmtkdqjhe" path="res://assets/audio/se/Choose.WAV" id="3_ge2td"]
[ext_resource type="AudioStream" uid="uid://cewkvylqdr7og" path="res://assets/audio/se/select.WAV" id="4_8qnbo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gn64q"]
atlas = ExtResource("1_7akgs")
region = Rect2(0, 28, 42, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_im2xv"]
atlas = ExtResource("1_7akgs")
region = Rect2(0, 0, 42, 28)

[node name="HBoxOptionsContainer" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 28.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 0
script = ExtResource("1_5a6v4")

[node name="ButtonLeft" type="TextureButton" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = SubResource("AtlasTexture_gn64q")
texture_pressed = SubResource("AtlasTexture_gn64q")
texture_hover = SubResource("AtlasTexture_gn64q")
texture_disabled = SubResource("AtlasTexture_im2xv")
texture_focused = SubResource("AtlasTexture_gn64q")
flip_h = true
script = ExtResource("2_ux2t3")
hover_sound = ExtResource("3_ge2td")
click_sound = ExtResource("4_8qnbo")

[node name="OptionsLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"LabelWhite"
text = "test"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonRight" type="TextureButton" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = SubResource("AtlasTexture_gn64q")
texture_pressed = SubResource("AtlasTexture_gn64q")
texture_hover = SubResource("AtlasTexture_gn64q")
texture_disabled = SubResource("AtlasTexture_im2xv")
texture_focused = SubResource("AtlasTexture_gn64q")
script = ExtResource("2_ux2t3")
hover_sound = ExtResource("3_ge2td")
click_sound = ExtResource("4_8qnbo")

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="pressed" from="ButtonLeft" to="." method="_on_button_left_pressed"]
[connection signal="pressed" from="ButtonRight" to="." method="_on_button_right_pressed"]
